--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -161,22 +161,42 @@ footer{
 
 }
 
+@media (max-width: 820px){
+    .accordion-header:active ~ .accordion-panel , .accordion-panel:active{
+        height: 12rem;
+    }
+
+    .accordion-header:focus ~ .accordion-panel , .accordion-panel:focus{
+        height: 12rem;
+    }
+
+    .accordion:active .accordion-header{
+        color: rgb(42, 148, 224);
+        font-weight: 700;
+    }
+
+    .accordion:active .fa-plus {
+        opacity: 1;
+    }
+
+    .accordion:focus .accordion-header{
+        color: rgb(42, 148, 224);
+        font-weight: 700;
+    }
+
+    .accordion:focus .fa-plus {
+        opacity: 1;
+    }
+
+
+}
+
 @media (max-width: 420px){
     .header{
     height: 4rem;
     }
    h1{
         font-size: 16px;
-    }
-
-    .accordion{
-        border: 5px solid #fff;
-        box-shadow: none;
-        border-radius: 1rem;
-    }
-
-    .accordion-header:hover ~ .accordion-panel , .accordion-panel:hover{
-        height: 12rem;
     }
 
     .accordion input[type="radio"]:checked + label  .accordion-panel {
